# Hashmato-app

hashmato-app/apps/: package-lock.json  package.json
hashmato-app/apps/kds/: index.html  package-lock.json  package.json  vite.config.ts
hashmato-app/apps/kds/src/: App.tsx
hashmato-app/apps/kiosk/: index.html  package-lock.json  package.json  vite.config.ts
hashmato-app/apps/kiosk/src/: App.tsx
hashmato-app/apps/pos/: index.html  package-lock.json  package.json  vite.config.ts
hashmato-app/apps/pos/src/: App.tsx
hashmato-app/apps/queue/: index.html  package-lock.json  package.json  vite.config.ts
hashmato-app/apps/queue/src/: App.tsx
hashmato-app/apps/shared/src/: api.ts  types.ts
hashmato-app/backend/api/: .env  Cargo.toml
hashmato-app/backend/api/.sqlx/: query-942fd9674a5672818a2762091edbe08694b6a21252e7a7532b0ebae2d9338a3d.json
hashmato-app/backend/api/migrations/: 0001_init.sql  20250920120000_init.sql  20250921022625_initial_setup.sql
hashmato-app/backend/api/src/: controllers.rs  db.rs  main.rs  models.rs  routes.rs
hashmato-app/docker/: docker-compose.yml
hashmato-app/tauri-app/: .env  package-lock.json  package.json  vite.config.ts
hashmato-app/tauri-app/src/: App.tsx  global.d.ts  types.ts
hashmato-app/tauri-app/src-tauri/: tauri.conf.json
hashmato-app/tauri-app/src-tauri/src/: main.rs
hashmato-app/tauri-app/src/components/: CartSidebar.tsx  Header.tsx  Loader.tsx  MenuCard.tsx  PeripheralModal.tsx  Sidebar.tsx
hashmato-app/touri-app/: package.json
hashmato-app/touri-app/src-tauri/: Cargo.toml  tauri.conf.json
(+10 files in other folders)
